hphp/hack/test/typecheck/inheritance/inherited_redeclared_as_static.php.exp
File "inherited_redeclared_as_static.php", line 15, characters 29-43:
The method nonStaticMethod is static (Typing[4091])
  File "inherited_redeclared_as_static.php", line 7, characters 22-36:
  It is defined as non-static here
File "inherited_redeclared_as_static.php", line 8, characters 29-40:
The method staticMethod is static (Typing[4091])
  File "inherited_redeclared_as_static.php", line 16, characters 22-33:
  It is defined as non-static here
File "inherited_redeclared_as_static.php", line 12, characters 17-22:
The property non_static_property is static (Typing[4091])
  File "inherited_redeclared_as_static.php", line 4, characters 13-18:
  It is defined as non-static here
File "inherited_redeclared_as_static.php", line 5, characters 20-25:
The property static_property is static (Typing[4091])
  File "inherited_redeclared_as_static.php", line 13, characters 10-15:
  It is defined as non-static here
